fix visibility popups

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,10 @@
     background-color: rgba(0, 0, 0, 0.5);
     top: 0;
     left: 0;
-    display: none;
     justify-content: center;
     align-items: center;
+    visibility: hidden;
+    /*Полностью прозрачно*/
+    opacity: 0;
+    transition: visibility 0.3s linear, opacity 0.3s linear;
 }
